corrected the button hover css to properly transform the buttons up for a pop effect

--- a/src/app/components/app/app.component.css
+++ b/src/app/components/app/app.component.css
@@ -41,7 +41,7 @@
   background-color: blueviolet;
   color: black;
   border-radius: 5px;
-  transform: scale(1);
+  transform: translateY(-0.10em);
 }
 
 .text-center {
