corrected styling to limit width and center the tasks box

--- a/src/app/components/app/app.component.css
+++ b/src/app/components/app/app.component.css
@@ -1,8 +1,9 @@
 .container {
+  margin: 0 auto;
   background-color: white;
   border-radius: 20px;
   padding: 10px 10px 10px 10px;
-  height: fit-content;
+  max-width: 1000px;
 }
 
 .card {
