--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -3,7 +3,7 @@
     <h1 class="text-center">{{title}}</h1>
     <div>
       <div class="card" *ngIf="(todoList.length == 0 || allComplete())">
-        <h2>All tasks are completed!</h2>
+        <h2 class="text-center">All tasks are completed!</h2>
       </div>
       <div class="card" *ngFor="let task of todoList">
         <span class="card-text bold-text" [ngStyle]="{'text-decoration': task.completed ? 'line-through' : 'none'}"> {{task.task}} </span>
